2004-08-20  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/smtphook.c, smtpserver/smtpserver.h,
	  smtpserver/smtpserver.c:
	    If the "my_perl" flag is not set, don't even let procedure
	    stack init (macro embedded) codes to run in hooks.
	    Call  ZSMTP_hook_set_ipaddress()  at the start of the
	    smtpserver() function loop.

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtptls.c, smtpserver/smtpcmds.c, smtpserver/smtpauth.c:
	    Reworked the 'with' clause data presentation in style of
	    the RFC 3848.

2004-08-12  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/subdaemons-ctf.c:
	    Eugene crosser noted two buglets in subdaemon
	    communication protocol processing.

	* smtpserver/smtpserver.c, man/smtpserver.8.in,
	  proto/smtpserver.conf.in:
	    Added a POSSIBILITY to report contacting IP address
	    literal in the initial 220 greeting line.

2004-08-04  Matti Aarnio  <mea@zmailer.org>

	* configure.in, man/smtpserver.8.in, proto/smtpserver.conf,
	  smtpserver/cfgread.c, smtpserver/policytest.c,
	  smtpserver/policytest.h, 
	    Igor Milyakov sent some new SPF related patches.

	* smtpserver/mxverify.c, smtpserver/policytest.c,
	  smtpserver/smtpserver.c, smtpserver/subdaemon-rtr.c:
	    Ran "gcc -ansi -pedantic"  and got a bunch of warnings.
	    This tries to fix most of those.

	* router/libdb/ldap-new.c:
	    Experimental fixes, and updates from Jeff Warnica.
	    He asked this to be stored into some other file,
	    rather than into baseline of ldap.c.

2004-07-14  Matti Aarnio  <mea@zmailer.org>

	* configure.in:
	    Version 2.99.57.pre3

	* smtpserver/smtptls.c:
	    Dist-cache disabled compilation fixed.

	* smtpserver/smtphook.c:
	    A bit work to please the compiler (to silence it, that is)

	* configure.in, smtpserver/smtptls.c:
	    Know  --enable-distcache  -- code modelled after
	    the one in Apache-2.0 mod_ssl module.
	    (Distributed Session Cache)

	* smtpserver/smtpserver.c, smtpserver/smtpserver.h,